// Copyright (c) 2019-present, Facebook, Inc.
// All rights reserved.
//
// This source code is licensed under the BSD-style license found in the
// LICENSE file in the root directory of this source tree. An additional grant
// of patent rights can be found in the PATENTS file in the same directory.

syntax = "proto3";

import "context.proto";

package aaa.protos;
option go_package = "magma/feg/gateway/services/aaa/protos";

// update_request with usages & included context
message update_request {
    uint32 octets_in = 1;
    uint32 octets_out = 2;
    uint32 packets_in = 3;
    uint32 packets_out = 4;
    context ctx = 5;
}

// acct_resp message - RPC message definition for Accounting-Response (currently empty)
// see: https://tools.ietf.org/html/rfc2866#section-4.2
message acct_resp {
}

// accounting service, provides support for corresponding Radius accounting Acct-Status-Types in Accounting-Requests
// see: https://tools.ietf.org/html/rfc2866#section-5.1
service accounting {
    // Acct-Status-Type Start
    rpc start(context) returns (acct_resp) {}
    // Accounting Interim-Update
    rpc interim_update(update_request) returns (acct_resp) {}
    // Acct-Status-Type Stop
    rpc stop(context) returns (acct_resp) {}
}
